CHANGES TO REMIND

* Version 3.0 Patch 15

+ MINOR ENHANCEMENTS

- Added a Print dialog to tkremind.

- Added support for Brazilian Portuguese.

+ BUG FIXES

- Fixed confusing error in rem2ps help messages.

* Version 3.0 Patch 14

+ CHANGE IN COPYING POLICY

- Remind is now distributed under an _AMENDED_ version of the Gnu
  General Public License.  These amendments are listed in the
  file COPYRIGHT.  The amendments were made for personal reasons;
  please don't ask me to explain them.  They probably don't affect
  you, anyway.

+ MAJOR ENHANCEMENTS

- Added an X-Windows front-end to Remind.  To use it, you must be
  running under X-Windows on UNIX, and have the "wish" tcl/tk
  interpreter, version 7.4 of tcl and 4.0 of tk.  The front-end is
  called "tkremind".

+ MINOR ENHANCEMENTS

- Added the WARN keyword for precise advance notice.  You can now
  have advance warning 5, 3, 1 and 0 days in advance (for example.)
  The WARN keyword operates similarly to the SCHED keyword in that it
  calls a user-defined function to obtain the advance warning sequence.

- Added support for QDOS/SMSQ on the Sinclair QL microcomputer,
  courtesy of Robert H. Klein <kleir000@goofy.zdv.Uni-Mainz.de>
  NOTE THAT I CANNOT TEST NOR SUPPORT THIS VERSION!

- Added support for AmigaDOS / SAS/C, courtesy of Martin Hohl
  <martinh@caverna.tynet.sub.org>.  As before, I CANNOT TEST NOR
  SUPPORT THIS VERSION, but will rely on feedback from others.

+ BUG FIXES

- Removed the "-n" option from Rem2PS.  Instead, if you want the
  PostScript calendar to start on a Monday, supply the "-m" option
  to Remind.  It was repugnant to have two options to two programs
  to accomplish one thing.

- The "hebdate" built-in function worked incorrectly with 5 arguments.
  The bug was pointed out by Hershel Safer <h.safer@ieee.org>

- This would hang up REMIND:   REM Mon 31 Feb MSG Foo
  and this would fail quietly: REM Mon 31 Feb 1996 MSG Foo
  Both have been fixed and now report bad date specifications.
